tests/resource/valid/class/unassigned_tuple_second_nullable.mamba
class X
    def (y, z): (Int, Int?)

    def init(self) =>
        self.y := 10
