tests/resource/invalid/syntax/top_lvl_class_access.mamba
class X
    def y.y: Int := 10
